--- a/ShitBrick Tool/ShitBrick Tool.vbproj
+++ b/ShitBrick Tool/ShitBrick Tool.vbproj
@@ -53,6 +53,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -87,6 +89,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SelectArch.Designer.vb">
+      <DependentUpon>SelectArch.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SelectArch.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Starter.vb" />
   </ItemGroup>
   <ItemGroup>
@@ -96,8 +104,12 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SelectArch.resx">
+      <DependentUpon>SelectArch.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
