--- a/ShitBrick Tool/ShitBrick Tool.vbproj
+++ b/ShitBrick Tool/ShitBrick Tool.vbproj
@@ -9,7 +9,7 @@
     </SchemaVersion>
     <ProjectGuid>{ED7FB96E-6D16-46D1-854D-41A64310F48F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>ShitBrick_Tool.Module1</StartupObject>
+    <StartupObject>ShitBrick_Tool.Automated_Sb_Tool</StartupObject>
     <RootNamespace>ShitBrick_Tool</RootNamespace>
     <AssemblyName>ShitBrick Tool</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -71,9 +71,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Detection.vb" />
-    <Compile Include="Fixer.vb" />
-    <Compile Include="Module1.vb" />
+    <Compile Include="Automated_Sb_Tool.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -89,7 +87,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Starter.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -100,7 +97,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
